packages/taquito-michel-codec/test/contracts_011/ill_typed/view_toplevel_dupable_type_input.tz
parameter nat;
storage nat;
code { CAR ; NIL operation ; PAIR } ;
view "dup" (ticket nat) nat { DROP; PUSH nat 1; PUSH nat 1 ; PAIR} ;

